[gd_scene load_steps=3 format=3 uid="uid://bghxnpywucjso"]

[ext_resource type="Theme" uid="uid://dudh2k1jjvgdk" path="res://themes/default_theme.tres" id="1_fe2o3"]
[ext_resource type="Script" uid="uid://bwuyc2n84asut" path="res://scripts/ui/main_menu.gd" id="2_1g8jr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -320.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_fe2o3")
script = ExtResource("2_1g8jr")

[node name="MenuContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 52.0
offset_right = 36.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../QuitButton")
text = " "

[node name="PlayLabel" type="Label" parent="MenuContainer/ButtonContainer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../PlayButton")
disabled = true
text = " "

[node name="ContinueLabel" type="Label" parent="MenuContainer/ButtonContainer/ContinueButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../ContinueButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../ContinueButton")
text = " "

[node name="SettingsLabel" type="Label" parent="MenuContainer/ButtonContainer/SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../SettingsButton")
text = " "

[node name="QuitLabel" type="Label" parent="MenuContainer/ButtonContainer/QuitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -56.0
offset_right = 33.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
text = "Libre Nikki"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 34.0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Greeting" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Greeting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GreetingLabel" type="Label" parent="Greeting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
focus_mode = 2
theme = ExtResource("1_fe2o3")
text = "Libre Nikki is not affiliated with Kikiyama
or Yume Nikki. It is purely a fan game.

Libre Nikki is still in early development.
If you are an artist, a composer or a programmer
and if you are willing to improve Libre Nikki,
I recommend to contribute to the project 
through Github. All contributions are welcome.

Thank you for reading and enjoy Libre Nikki!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MenuContainer/ButtonContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuContainer/ButtonContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MenuContainer/ButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuContainer/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
